[project]
name = "secure-csv-api"
version = "0.1.0"
description = ""
authors = [{ name = "Max Kryvych", email = "admin@gmail.com" }]
readme = "README.md"
requires-python = "~=3.12"
dependencies = ["aws-cdk-lib (>=2.195.0,<3.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.8"
pytest = "^8.3.5"

